(This file, NEWS, lists new features and enhancements. See CHANGES for fixes.)

unreleased

  * Added toml.jsf syntax.

  * Support '_' in numeric constants, binary and hex constants, imaginary
    numbers in go.jsf syntax.

  * Now there is an uninstall target that uninstalls ne.

  * Additionally load key bindings from ~/.ne/.keys-${TERM}

3.3.1 2021-05-16

  * The makefile has been made more distro friendly by making it possible
    to override all compiler and linker options.

  * A workaround has been implemented to make --ansi (mostly) work when
    compiling with ncurses. A change to ncurses in 2012 made tgoto() not
    working unless tgetent()/setupterm() are called first.

3.3.0 2020-02-27

  * You can now Save (^A) named documents from within the
    SelectDoc (F4) requester.

  * The mark, if set, is visible.

  * Warning about opening a document with the same name as an existing
    document now considers the fully qualified canonical path and name
    of each rather than just their basenames.

  * Status bar Modified flag (*) may also be underlined, indicating the
    corresponding file's modification time has changed since the document
    was loaded or saved.

3.2.0 2019-09-30

  * Macros: They now work across multiple documents. You can cancel macro
    recording, and append new recorded commands to your current macro.

  * New documents inherit their predecessor's current macro, search, and
    replace strings.

  * Saving of read-only documents requires confirmation.

  * Word completion now does not consider the word the cursor is currently
    in, which helps in disambiguating.

  * The option -h is now an alias for --help. Thanks to Lonnie Abelbeck for
    implementing this feature.

  * Add asterisk.jsf syntax.

  * FIND in string inputs brings up a requester with your input history.
    Use Enter to replace, TAB to insert into your input line; Escape to exit.

  * Enhanced commands: MoveEOW, NextWord, and PrevWord can now move to either