@@ -154,6 +154,8 @@ typedef enum {
 enum {
 	MAX_USER_BOOKMARK = 9,
 	AUTO_BOOKMARK,
+	PASTE_START_BOOKMARK,
+	PASTE_END_BOOKMARK,
 	WORDWRAP_BOOKMARK,
 	NUM_BOOKMARKS
 };
